--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
+GDAL==1.10.1
+autobahn==0.9.3-3
+futures==2.2.0
+libxml2-python==2.9.1
+mercurial==2.9
 psycopg2==2.5.4
+pyddp==0.3.1
 pymongo==2.7.2
+six==1.8.0
+trollius==0.3
+ujson==1.33
+wsaccel==0.6.2
 wsgiref==0.1.2
-python-ddp==0.1.3
