--- a/python_only/requirements.txt
+++ b/python_only/requirements.txt
@@ -1,2 +1,9 @@
+autobahn==0.9.3-3
+futures==2.2.0
 psycopg2==2.5.4
-wsgiref==0.1.2
+pyddp==0.3.1
+pymongo==2.7.2
+six==1.8.0
+trollius==0.3
+ujson==1.33
+wsaccel==0.6.2
