--- a/etc/mongodb.conf
+++ b/etc/mongodb.conf
@@ -98,3 +98,8 @@ journal=true
 # SSL Key file and password
 #sslPEMKeyFile = /etc/ssl/mongodb.pem
 #sslPEMKeyPassword = pass
+
+replSet = meteor
+oplogSize = 1024
+smallfiles = true
+nohttpinterface = true
